--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">BPGC Login</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="appwidget_text">LOGIN</string>
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
 </resources>
