--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="Default">Check the save username box to save your login credentials.</string>
     <string name="add_widget">Add widget</string>
     <string name="title_activity_settings_main">SettingsMain</string>
+    <string name="delete_credentials">Delete Credentials</string>
 </resources>
