--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="add_widget">Add widget</string>
     <string name="title_activity_settings_main">SettingsMain</string>
     <string name="delete_credentials">Delete Credentials</string>
+    <string name="title_activity_set_default">SetDefault</string>
 </resources>
